# backend/api/impl.go
@@ -66,6 +66,12 @@ func (s *Server) LandlordsList(w http.ResponseWriter, r *http.Request, params La
 			email, 
 			mobile, 
 			phone, 
+			address_line_1,
+			address_line_2,
+			suburb,
+			postcode,
+			state,
+			country,
 			is_archived,
 			created_at,
 			updated_at
@@ -91,6 +97,12 @@ func (s *Server) LandlordsList(w http.ResponseWriter, r *http.Request, params La
 			&landlord.Email,
 			&landlord.Mobile,
 			&landlord.Phone,
+			&landlord.AddressLine1,
+			&landlord.AddressLine2,
+			&landlord.Suburb,
+			&landlord.Postcode,
+			&landlord.State,
+			&landlord.Country,
 			&landlord.IsArchived,
 			&landlord.CreatedAt,
 			&landlord.UpdatedAt,
@@ -157,13 +169,25 @@ func (s *Server) LandlordsCreate(w http.ResponseWriter, r *http.Request) {
 			name,
 			email,
 			mobile,
-			phone
+			phone,
+			address_line_1,
+			address_line_2,
+			suburb,
+			postcode,
+			state,
+			country
 		) VALUES (
 			$1,
 			$2,
 			$3,
 			$4,
-			$5
+			$5,
+			$6,
+			$7,
+			$8,
+			$9,
+			$10,
+			$11
 		) RETURNING 
 		 	id,
 			name,
@@ -183,6 +207,12 @@ func (s *Server) LandlordsCreate(w http.ResponseWriter, r *http.Request) {
 		payload.Email,
 		payload.Mobile,
 		payload.Phone,
+		payload.AddressLine1,
+		payload.AddressLine2,
+		payload.Suburb,
+		payload.Postcode,
+		payload.State,
+		payload.Country,
 	)
 
 	var createdLandlord Landlord
@@ -226,6 +256,12 @@ func (s *Server) LandlordsArchive(w http.ResponseWriter, r *http.Request, id str
 			email, 
 			mobile, 
 			phone, 
+			address_line_1,
+			address_line_2,
+			suburb,
+			postcode,
+			state,
+			country,
 			is_archived,
 			created_at,
 			updated_at
@@ -237,6 +273,12 @@ func (s *Server) LandlordsArchive(w http.ResponseWriter, r *http.Request, id str
 		&archivedLandlord.Email,
 		&archivedLandlord.Mobile,
 		&archivedLandlord.Phone,
+		&archivedLandlord.AddressLine1,
+		&archivedLandlord.AddressLine2,
+		&archivedLandlord.Suburb,
+		&archivedLandlord.Postcode,
+		&archivedLandlord.State,
+		&archivedLandlord.Country,
 		&archivedLandlord.IsArchived,
 		&archivedLandlord.CreatedAt,
 		&archivedLandlord.UpdatedAt,
@@ -265,6 +307,12 @@ func (s *Server) LandlordsGet(w http.ResponseWriter, r *http.Request, id string)
 			email, 
 			mobile, 
 			phone, 
+			address_line_1,
+			address_line_2,
+			suburb,
+			postcode,
+			state,
+			country,
 			is_archived,
 			created_at,
 			updated_at
@@ -277,6 +325,12 @@ func (s *Server) LandlordsGet(w http.ResponseWriter, r *http.Request, id string)
 		&landlord.Email,
 		&landlord.Mobile,
 		&landlord.Phone,
+		&landlord.AddressLine1,
+		&landlord.AddressLine2,
+		&landlord.Suburb,
+		&landlord.Postcode,
+		&landlord.State,
+		&landlord.Country,
 		&landlord.IsArchived,
 		&landlord.CreatedAt,
 		&landlord.UpdatedAt,
@@ -310,8 +364,14 @@ func (s *Server) LandlordsUpdate(w http.ResponseWriter, r *http.Request, id stri
 			email = $2,
 			mobile = $3,
 			phone = $4,
+			address_line_1 = $5,
+			address_line_2 = $6,
+			suburb = $7,
+			postcode = $8,
+			state = $9,
+			country = $10,
 			updated_at = NOW()
-		WHERE id = $5
+		WHERE id = $11
 		RETURNING id,
 			name,
 			email,
@@ -329,6 +389,12 @@ func (s *Server) LandlordsUpdate(w http.ResponseWriter, r *http.Request, id stri
 		payload.Email,
 		payload.Mobile,
 		payload.Phone,
+		payload.AddressLine1,
+		payload.AddressLine2,
+		payload.Suburb,
+		payload.Postcode,
+		payload.State,
+		payload.Country,
 		id,
 	)
 
@@ -340,6 +406,12 @@ func (s *Server) LandlordsUpdate(w http.ResponseWriter, r *http.Request, id stri
 		&updatedLandlord.Email,
 		&updatedLandlord.Mobile,
 		&updatedLandlord.Phone,
+		&updatedLandlord.AddressLine1,
+		&updatedLandlord.AddressLine2,
+		&updatedLandlord.Suburb,
+		&updatedLandlord.Postcode,
+		&updatedLandlord.State,
+		&updatedLandlord.Country,
 		&updatedLandlord.IsArchived,
 		&updatedLandlord.CreatedAt,
 		&updatedLandlord.UpdatedAt,
@@ -393,6 +465,7 @@ func (s *Server) PropertiesList(w http.ResponseWriter, r *http.Request, params P
 			suburb,
 			state,
 			postcode,
+			country,
 			landlord_id,
 			management_fee,
 			is_archived,
@@ -421,6 +494,7 @@ func (s *Server) PropertiesList(w http.ResponseWriter, r *http.Request, params P
 			&property.Suburb,
 			&property.State,
 			&property.Postcode,
+			&property.Country,
 			&property.LandlordId,
 			&property.ManagementFee,
 			&property.IsArchived,
@@ -479,6 +553,7 @@ func (s *Server) PropertiesCreate(w http.ResponseWriter, r *http.Request) {
 			suburb,
 			state,	
 			postcode,
+			country,
 			landlord_id,
 			management_fee
 		) VALUES (
@@ -497,6 +572,7 @@ func (s *Server) PropertiesCreate(w http.ResponseWriter, r *http.Request) {
 			suburb, 
 			state, 
 			postcode, 
+			country,
 			landlord_id, 
 			management_fee, 
 			is_archived,
@@ -513,6 +589,7 @@ func (s *Server) PropertiesCreate(w http.ResponseWriter, r *http.Request) {
 		payload.Suburb,
 		payload.State,
 		payload.Postcode,
+		payload.Country,
 		payload.LandlordId,
 		payload.ManagementFee,
 	)
@@ -526,6 +603,7 @@ func (s *Server) PropertiesCreate(w http.ResponseWriter, r *http.Request) {
 		&createdProperty.Suburb,
 		&createdProperty.State,
 		&createdProperty.Postcode,
+		&createdProperty.Country,
 		&createdProperty.LandlordId,
 		&createdProperty.ManagementFee,
 		&createdProperty.IsArchived,
@@ -559,6 +637,7 @@ func (s *Server) PropertiesArchive(w http.ResponseWriter, r *http.Request, id st
 			suburb,
 			state,
 			postcode,
+			country,
 			landlord_id,
 			management_fee,
 			is_archived,
@@ -573,6 +652,7 @@ func (s *Server) PropertiesArchive(w http.ResponseWriter, r *http.Request, id st
 		&archivedProperty.Suburb,
 		&archivedProperty.State,
 		&archivedProperty.Postcode,
+		&archivedProperty.Country,
 		&archivedProperty.LandlordId,
 		&archivedProperty.ManagementFee,
 		&archivedProperty.IsArchived,
@@ -600,6 +680,7 @@ func (s *Server) PropertiesGet(w http.ResponseWriter, r *http.Request, id string
 			suburb,
 			state,
 			postcode,
+			country,
 			landlord_id,
 			management_fee,
 			is_archived,
@@ -616,6 +697,7 @@ func (s *Server) PropertiesGet(w http.ResponseWriter, r *http.Request, id string
 		&property.Suburb,
 		&property.State,
 		&property.Postcode,
+		&property.Country,
 		&property.LandlordId,
 		&property.ManagementFee,
 		&property.IsArchived,
@@ -648,10 +730,11 @@ func (s *Server) PropertiesUpdate(w http.ResponseWriter, r *http.Request, id str
 			suburb = $3,
 			state = $4,
 			postcode = $5,
-			landlord_id = $6,
-			management_fee = $7,
+			country = $6,
+			landlord_id = $7,
+			management_fee = $8,
 			updated_at = NOW()
-		WHERE id = $8
+		WHERE id = $9
 		RETURNING 
 			id, 
 			address_line_1, 
@@ -659,6 +742,7 @@ func (s *Server) PropertiesUpdate(w http.ResponseWriter, r *http.Request, id str
 			suburb, 
 			state, 
 			postcode, 
+			country,
 			landlord_id, 
 			management_fee, 
 			is_archived,
@@ -674,6 +758,7 @@ func (s *Server) PropertiesUpdate(w http.ResponseWriter, r *http.Request, id str
 		payload.Suburb,
 		payload.State,
 		payload.Postcode,
+		payload.Country,
 		payload.LandlordId,
 		payload.ManagementFee,
 		id,
@@ -688,6 +773,7 @@ func (s *Server) PropertiesUpdate(w http.ResponseWriter, r *http.Request, id str
 		&updatedProperty.Suburb,
 		&updatedProperty.State,
 		&updatedProperty.Postcode,
+		&updatedProperty.Country,
 		&updatedProperty.LandlordId,
 		&updatedProperty.ManagementFee,
 		&updatedProperty.IsArchived,
